@@ -115,3 +115,4 @@
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 po/es.po;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 po/fi.po;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/hu.po;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/it.po;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 po/pt_BR.po;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 po/sk.po;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 po/zh_CN.po;  ) > 0.15.0cvs17.patchset
 ( cvs diff -u -r 1.1.2.173 -r 1.1.2.174 configure.ac;  ) > 0.16.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/hu.po;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/it.po;  ) > 0.16.0cvs2.patchset
+( cvs diff -u -r 1.1.2.89 -r 1.1.2.90 src/feed.c;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/feed.h;  cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/rssyl_cb_menu.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/rssyl_cb_menu.h;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/rssyl_gtk.c;  ) > 0.17.0cvs1.patchset
