@@ -32,6 +32,7 @@
 #include "alertpanel.h"
 #include "gtk/inputdialog.h"
 #include "prefs_common.h"
+#include "filesel.h"
 #include "inc.h"
 
 #include "feed.h"
@@ -282,13 +283,17 @@ void rssyl_refresh_cb(FolderView *folderview, guint action,
 			return;
 	}
 
+	main_window_cursor_wait(mainwindow_get_mainwindow());
 	rssyl_update_feed(ritem);
+	main_window_cursor_normal(mainwindow_get_mainwindow());
 }
 
 void rssyl_refresh_all_cb(FolderView *folderview, guint action,
 		GtkWidget *widget)
 {
+	main_window_cursor_wait(mainwindow_get_mainwindow());
 	rssyl_refresh_all_feeds();
+	main_window_cursor_normal(mainwindow_get_mainwindow());
 }
 
 void rssyl_prop_cb(FolderView *folderview, guint action, GtkWidget *widget)
@@ -349,4 +354,68 @@ void rssyl_rename_cb(FolderView *folderview, guint action,
 
 	folder_item_prefs_save_config_recursive(item);
 	folder_write_list();
+}
+
+void rssyl_import_feed_list_cb(FolderView *folderview, guint action,
+		GtkWidget *widget)
+{
+	debug_print("RSSyl: rssyl_import_feed_cb\n");
+
+	FolderItem *item;
+	gchar *msg = NULL;
+	gchar *opml_list = NULL;
+	GSList *subs = NULL, *cur;
+
+	item = folderview_get_selected_item(folderview);
+	g_return_if_fail(item != NULL);
+	g_return_if_fail(item->folder != NULL);
+	g_return_if_fail( !folder_item_parent(item) );
+
+	opml_list = filesel_select_file_open_with_filter(
+			_("Select a .opml file"), NULL, "*.opml");
+	
+	if (!is_file_exist(opml_list))
+		goto err_out;
+
+	subs = rssyl_get_opml_list(opml_list);
+	
+	if (subs == NULL) {
+		goto err_out;
+	}
+	
+	if (g_slist_length(subs) < 10) {
+		msg = g_strdup(_("Do you want to subscribe to the following feeds?"));
+		for (cur = subs; cur; cur = cur->next) {
+			gchar *tmp = g_strdup_printf("%s\n%s",
+					msg,
+					(gchar *)cur->data);
+			g_free(msg);
+			msg = tmp;
+		}
+	} else {
+		msg = g_strdup_printf(_("Do you want to subscribe to the %d feeds found?"),
+			g_slist_length(subs));
+	}
+	if (alertpanel("Subscriptions found",
+			msg, GTK_STOCK_YES, GTK_STOCK_NO, NULL) != G_ALERTDEFAULT) {
+		slist_free_strings(subs);
+		g_slist_free(subs);
+		g_free(opml_list);
+		return;
+	}
+	for (cur = subs; cur; cur = cur->next) {
+		rssyl_subscribe_new_feed(item, (gchar *)cur->data, TRUE);
+	}
+	
+	slist_free_strings(subs);
+	g_slist_free(subs);
+	g_free(opml_list);
+	return;	
+err_out:
+	alertpanel_warning("Nothing to import has been found");
+	g_free(opml_list);
+	slist_free_strings(subs);
+	g_slist_free(subs);
+	return;
+
 }
