@@ -52,6 +52,7 @@ static char *rssyl_popup_menu_labels[] =
 	N_("/Subscribe _new feed..."),
 	N_("/_Unsubscribe feed..."),
 	N_("/Feed pr_operties..."),
+	N_("/Import feed list..."),
 	"/---",
 	N_("/Rena_me..."),
 	"/---",
@@ -71,6 +72,7 @@ static void rssyl_set_sensitivity(GtkItemFactory *ifac, FolderItem *item)
 	SET_SENS(_("/Refresh feed"), folder_item_parent(item) != NULL && ritem->url);
 	SET_SENS(_("/Refresh all feeds"), folder_item_parent(item) == NULL );
 	SET_SENS(_("/Subscribe new feed..."), TRUE);
+	SET_SENS(_("/Import feed list..."), folder_item_parent(item) == NULL );
 	SET_SENS(_("/Unsubscribe feed..."), folder_item_parent(item) != NULL && ritem->url );
 	SET_SENS(_("/Feed properties..."), folder_item_parent(item) != NULL && ritem->url );
 	SET_SENS(_("/Rename..."), folder_item_parent(item) != NULL );
@@ -89,6 +91,7 @@ static GtkItemFactoryEntry rssyl_popup_entries[] =
 	{ NULL, NULL, rssyl_new_feed_cb, 0, NULL },
 	{ NULL, NULL, rssyl_remove_feed_cb, 0, NULL },
 	{ NULL, NULL, rssyl_prop_cb, 0, NULL },
+	{ NULL, NULL, rssyl_import_feed_list_cb, 0, NULL },
 	{ NULL, NULL, NULL, 0, "<Separator>" },
 	{ NULL, NULL, rssyl_rename_cb, 0, NULL },
 	{ NULL, NULL, NULL, 0, "<Separator>" },
