@@ -1,3 +1,12 @@
+2007-12-28 [colin]	0.17.0cvs1
+
+	* src/feed.c
+	* src/feed.h
+	* src/rssyl_cb_menu.c
+	* src/rssyl_cb_menu.h
+	* src/rssyl_gtk.c
+		Add OPML import.
+
 2007-12-17 [paul]	0.17.0
 
 	0.17.0 released
